--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,11 @@ a {
   color: var(--black);
 }
 
+button {
+  border: none;
+  background-color: white;
+}
+
 ul {
   list-style: none;
   display: flex;
@@ -86,7 +91,6 @@ ul {
   box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2), 0px 3px 4px rgba(0, 0, 0, 0.12),
     0px 2px 4px;
 }
-
 
 @media (max-width: 600px) {
   .container {
